# ospp

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
ospp/: CMakeLists.txt  clipboard.cpp  clipboard.h  cursor.cpp  cursor.h  display_mode.cpp  display_mode.h  event.cpp  event.h  hints.cpp  hints.h  init.cpp  init.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  os.h  types.hpp  window.cpp  window.h
ospp/impl/dummy/: clipboard.cpp  cursor.cpp  display_mode.cpp  event.cpp  hints.cpp  init.cpp  keyboard.cpp  mouse.cpp  window.cpp
ospp/impl/glfw/: clipboard.hpp  config.hpp  cursor.hpp  display_mode.hpp  error.hpp  event.hpp  hints.cpp  hints.hpp  init.hpp  keyboard.hpp  mouse.hpp  window.hpp
ospp/impl/mml/: clipboard.hpp  config.hpp  cursor.hpp  display_mode.hpp  error.hpp  event.hpp  hints.hpp  init.hpp  keyboard.hpp  mouse.hpp  window.hpp
ospp/impl/sdl/: clipboard.hpp  config.hpp  cursor.hpp  display_mode.hpp  error.hpp  event.hpp  hints.hpp  init.hpp  keyboard.hpp  mouse.hpp  window.hpp
tests/: CMakeLists.txt  main.cpp  simple_image.h
