cmake_minimum_required(VERSION 3.14)

set(OSPP_MAIN_PROJECT ON)
if(DEFINED PROJECT_SOURCE_DIR)
    set(OSPP_MAIN_PROJECT OFF)
endif()

project(ospp)
include(CTest)

option(BUILD_OSPP_SHARED "Build as a shared library." ${ITC_MAIN_PROJECT})
option(BUILD_OSPP_TESTS "Build the tests" ${ITC_MAIN_PROJECT})

set(OSPP_BACKEND_TYPE "MML" CACHE STRING "Backend type chosen by the user at CMake configure time")
set_property(CACHE OSPP_BACKEND_TYPE PROPERTY STRINGS SDL GLFW MML)

if(BUILD_OSPP_TESTS)
	if(NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
		set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
	endif()
    if(NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
    endif()
	if(NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
		set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
	endif()

    # Second, for multi-config builds (e.g. msvc)
    foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
        string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
        set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )
        set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} )
        set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY} )
    endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

    message(STATUS "Enabled ${PROJECT_NAME} tests.")

endif()

if(BUILD_OSPP_SHARED)
	set(BUILD_SHARED_LIBS ON)
endif()


add_subdirectory(3rdparty)
add_subdirectory(ospp)


if(BUILD_OSPP_TESTS)
	add_subdirectory(tests)
    
    set(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS_SKIP TRUE)
    include(InstallRequiredSystemLibraries)

    if(MINGW)
        get_filename_component( Mingw_Path ${CMAKE_CXX_COMPILER} PATH )
        file(GLOB MINGW_SYSTEM_RUNTIME_LIBS "${Mingw_Path}/*.dll")
        set(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} ${MINGW_SYSTEM_RUNTIME_LIBS})
    endif()
    message(STATUS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS})


    if(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS)
    add_custom_target(copy_compiler_dependencies ALL
        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
    endif()

    if(CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS)
        install( PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )
    endif()
endif()
